welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:51: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:54: error: expected start of definition
	override def forward()  {
                 ^Diagonal:57: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:60: error: expected start of definition
	override def backward() {
                 ^Diagonal:63: error: Unmatched closing brace '}' ignored here
}
^